--- a/style.css
+++ b/style.css
@@ -1,112 +1,187 @@
 html, body {
-    height: 100%;
-    margin: 0;
-    padding: 0;
-  }
-  
-  body{
-    background: linear-gradient(to bottom, #3b1f63, #813d9c);
-    color: white;
-    font-size: 16px;
-    background-repeat: no-repeat;
-    background-size: cover;
-    background-position: center center;
-    background-attachment: fixed;
-  }
-  
-  .container {
-    margin: 2vh;
-    width: 90vw;
-    height: 80vh;
-    position: relative;
+  height: 100%;
+  margin: 0;
+  padding: 0;
+}
+
+body{
+  background: linear-gradient(to bottom, #3b1f63, #813d9c);
+  color: white;
+  font-size: 16px;
+  background-repeat: no-repeat;
+  background-size: cover;
+  background-position: center center;
+  background-attachment: fixed;
+}
+
+.container {
+  margin: 2vh;
+  width: 90vw;
+  height: 80vh;
+  position: relative;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+}
+
+div.tres {
+  width: 95%;
+  height: 95%;
+  outline: solid 0.5px #fff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  display: flex;
+  flex-direction: row;
+/*   border-radius: 10% 0%; */
+}
+
+
+a {
+  box-shadow: inset 0 0 0 0 #fff;
+  color: #FFFFFF;
+  text-decoration: none;
+  margin: 0 -.25rem;
+  padding: 0 .25rem;
+  transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
+}
+
+a:hover {
+  box-shadow: inset 100px 0 0 0 #fff;
+  color: #3b1f63;
+  cursor: pointer;
+}
+
+.contentstuff{
+  width:100%;
+  display: inline-block;
+}
+
+.buttond{
+  box-shadow: none;
+  text-align: center;
+  text-decoration: none;
+  padding: 0.5rem;
+  border-style: solid;
+  border-color:white;
+  border-width: 2px;
+  transition: color .6s ease-in-out, box-shadow .3s ease-in-out;
+    background-color: rgba(255, 122, 89, 0);
+  color: white;
+  margin-bottom: 2rem;
+
+}
+
+.buttond:hover {
+  box-shadow: none;
+  background-color: #FFFFFF;
+  color: #3b1f63;
+  cursor: pointer;
+}
+
+
+#navbar {
+  width: 30%;
+  height: 100%;
+  text-align: center;
+  font-family: 'Montserrat', sans-serif;
+  font-weight: 200;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.wrapperitems{
     display: flex;
-    align-items: center;
-    justify-content: center;
+  flex-wrap: wrap;
+}
+
+.items{
+  margin: 2rem 2rem 2rem 2rem;
+  width: 25%;
+  box-sizing: border-box;
+  padding: 10px;
+}
+
+@media (max-width: 480px) {
+  .child {
+    width: 100%;
   }
-  
+}
+
+iframe{
+  border:none;
+  display: block;
+  margin-top: 2rem;
+}
+
+h1, h2{
+  font-family: 'Montserrat', sans-serif;
+}
+
+#navbar.h2{
+  font-weight: 400;
+}
+
+.social{
+  margin-top:2rem;
+  margin-left:1rem;
+  display: inline-block;
+  box-shadow: none;
+  text-decoration: none;
+  border: none;
+  transition: color .6s ease-in-out, box-shadow .3s ease-in-out;
+  color: white;
+}
+
+.social:hover {
+  box-shadow: none;
+  background:none;
+  color: #8740e9;
+  cursor: pointer;
+}
+
+#content {
+  width: 70%;
+  height: 100%;
+  padding: 3vh;
+  display: flex;
+  align-items: center;
+  padding-right: 6vh;
+  font-family: 'Roboto', sans-serif;
+}
+
+@media only screen and (max-width: 768px) {
   div.tres {
-    width: 95%;
-    height: 95%;
-    outline: solid 0.5px #fff;
-    position: absolute;
-    top: 50%;
-    left: 50%;
-    transform: translate(-50%, -50%);
-    display: flex;
-    flex-direction: row;
+    flex-direction: column;
+    overflow: auto;
   }
-  
-  a {
-    box-shadow: inset 0 0 0 0 #fff;
-    color: #FFFFFF;
-    text-decoration: none;
-    margin: 0 -.25rem;
-    padding: 0 .25rem;
-    transition: color .3s ease-in-out, box-shadow .3s ease-in-out;
-  }
-  
-  a:hover {
-    box-shadow: inset 100px 0 0 0 #fff;
-    color: #3b1f63;
+
+  .items {
+    width: 50%;
   }
   
   #navbar {
-    width: 30%;
-    height: 100%;
-    text-align: center;
-    font-family: 'Montserrat', sans-serif;
-    font-weight: 200;
-    display: flex;
-    flex-direction: column;
-    justify-content: center;
+    width: 100%;
+    height: auto;
+    padding-bottom: 2vh;
   }
-  
-  .items{
-    margin: 2rem 2rem 2rem 2rem;
-  }
-  
-  h1, h2{
-    font-family: 'Montserrat', sans-serif;
-  }
-  
-  #navbar.h2{
-    font-weight: 400;
-  }
-  
+
   #content {
-    width: 70%;
-    height: 100%;
-    padding: 3vh;
-    display: flex;
-    align-items: center;
-    padding-right: 6vh;
+    width: 100%;
+    height: auto;
+    padding-top: 4vh;
+    justify-content: center;
+    padding-right: 0;
+    overflow: none;
   }
-  
-  @media only screen and (max-width: 768px) {
-    div.tres {
-      flex-direction: column;
-      overflow: auto;
-    }
-  
-  
-    
-    #navbar {
-      width: 100%;
-      height: auto;
-      padding-bottom: 2vh;
-    }
-  
-    #content {
-      width: 100%;
-      height: auto;
-      padding-top: 4vh;
-      text-align: center;
-      justify-content: center;
-      padding-right: 0;
-      overflow: none;
-    }
-  
-    #navbar a {
-      font-size: 1.2rem;
-    }
-}
+
+  h1,h3{
+    text-align: center;
+  }
+
+  #navbar a {
+    font-size: 1.2rem;
+  }
+  }
